# winter-image-daemon

./: .gitignore  README.md  pyproject.toml
imagedaemon/: __init__.py  registry.py
imagedaemon/cameras/: __init__.py
imagedaemon/cameras/pirt/: __init__.py  meta.py  pipelines.py
imagedaemon/cameras/qcmos/: __init__.py  meta.py  pipelines.py
imagedaemon/cameras/summer-ccd/: __init__.py  meta.py  pipelines.py
imagedaemon/cameras/winter/: __init__.py  master_frame_builder.py  meta.py  pipelines.py  winter_image.py
imagedaemon/config/: astrom.param  astrom.sex  imagedaemon-winter.yaml
imagedaemon/config/stage_for_deletion/: astrom_anet.param  astrom_anet.sex  config.swarp
imagedaemon/daemon/: base_daemon.py  camera_worker.py  cli.py  rpc.py
imagedaemon/meta/: base.py
imagedaemon/notebooks/: cameras.ipynb  daemon_client_example.ipynb  focus_example.ipynb  focus_example_summerccd.ipynb  focus_example_winter.ipynb  hot_pixel_replacement_sandbox.ipynb  pirt_pipeline_example.ipynb  pirt_pipeline_freya_example.ipynb  run_camera_pipelines.ipynb  slack_example.ipynb  winter_quicklook.ipynb  winter_skymodel_minidrp_sandbox.ipynb  winter_skymodel_minidrp_sandbox2.ipynb
imagedaemon/pipelines/: base.py
imagedaemon/processing/: astrometry.py  calibration.py  focus.py  masters.py  sextractor.py
imagedaemon/scripts/: build_calibration_masters.py  calibrate_and_solve_images.py  install_daemon.py  winter_focus_loop_test.py
imagedaemon/utils/: image.py  ldactools.py  mask.py  notify.py  paths.py  serialization.py  wcs_utils.py
(+4 files in other folders)
